src/test/deca/context/invalid/minus_inst.deca
//Test pour minus

//Resultat: can't apply 'minus' to a boolean

{
    boolean x = true;
    x = -x;
    println(x) ; 
}